fix for booking bar translateY on ios

--- a/src/styles/views/booking-widget.less
+++ b/src/styles/views/booking-widget.less
@@ -79,6 +79,7 @@ booking-widget-add-room form-element {
     text-align: center;
 
     transform: translateY(-50%);
+    vertical-align:top;
   }
 
     &.hotel:before   { content: @fa-var-map-marker; }
@@ -101,6 +102,7 @@ booking-widget-add-room form-element {
     padding: @baseline/4 0;
 
     transform: translateY(-50%);
+    vertical-align:top;
   }
 
   input[type=text],
@@ -122,6 +124,7 @@ booking-widget-add-room form-element {
     opacity: 1;
 
     transform: translateY(40%);
+    vertical-align:top;
   }
 
   // fake displaying of date picker
@@ -145,6 +148,7 @@ booking-widget-add-room form-element {
     white-space: nowrap;
 
     transform: translateY(-50%);
+    vertical-align:top;
 
     pointer-events: none;
   }
@@ -269,6 +273,7 @@ booking-widget-search {
       color: #ddd;
       font-size: 21px;
       transform: translateY(-50%);
+      vertical-align:top;
       content: @fa-var-chevron-right;
     }
   }
